# volrec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/opencv-4.10.0/x64/vc17/lib/: opencv_calib3d4100.lib  opencv_core4100.lib  opencv_dnn4100.lib  opencv_features2d4100.lib  opencv_flann4100.lib  opencv_gapi4100.lib  opencv_highgui4100.lib  opencv_imgcodecs4100.lib  opencv_imgproc4100.lib  opencv_ml4100.lib  opencv_objdetect4100.lib  opencv_photo4100.lib  opencv_stitching4100.lib  opencv_video4100.lib  opencv_videoio4100.lib
res/pear/: cam1.ini  cam2.ini  cam3.ini  cam4.ini
res/tape/: cam1.ini  cam2.ini  cam3.ini  cam4.ini
src/: Camera.cpp  Camera.hpp  LookupTable.hpp  Main.cpp  Main.hpp  Scene.cpp  Scene.hpp  Voxel.hpp  VoxelGrid.cpp  VoxelGrid.hpp
src/Exporter/: CMakeLists.txt  Exporter.cpp
